[gd_scene load_steps=13 format=2]

[ext_resource path="res://ui_classes/CustomWindowDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/Bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/images/UI/Eye Close.svg" type="Texture" id=4]
[ext_resource path="res://themes/debugger_theme.tres" type="Theme" id=5]

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.27451 )

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0, 0.0392157, 0.113725, 1 )
border_width_top = 5
border_width_bottom = 5
border_color = Color( 0.32549, 0.67451, 1, 1 )
corner_radius_top_left = 20
corner_radius_bottom_right = 20
corner_detail = 1
shadow_color = Color( 0, 0.666667, 1, 0.0509804 )
shadow_size = 70
shadow_offset = Vector2( 0, 20 )

[sub_resource type="StyleBoxFlat" id=7]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.192157, 0.192157, 1 )
corner_radius_top_left = 10
corner_detail = 1
shadow_color = Color( 1, 0, 0, 0.6 )
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.556863, 0, 0.00784314, 0.580392 )
corner_radius_top_left = 10
corner_detail = 1
shadow_color = Color( 1, 0, 0, 0.6 )
shadow_size = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 5.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.6, 0.6, 0.6, 0 )
draw_center = false
corner_radius_top_left = 10
corner_detail = 1
shadow_color = Color( 0, 0.345098, 1, 0.6 )
shadow_size = 10
shadow_offset = Vector2( -5, 0 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 40.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.32549, 0.67451, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 10
corner_detail = 1
shadow_color = Color( 0.101961, 0.6, 0.909804, 0.211765 )
shadow_size = 25
shadow_offset = Vector2( 0, 5 )

[node name="CustomWindowDialog" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="WD" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -278.0
margin_top = -170.0
margin_right = 278.0
margin_bottom = 188.0
rect_min_size = Vector2( 340, 0 )
mouse_filter = 1
custom_styles/panel = SubResource( 1 )
resizable = true

[node name="VB" type="VBoxContainer" parent="WD"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = 20.0
margin_right = -17.0
margin_bottom = -20.0

[node name="SC" type="ScrollContainer" parent="WD/VB"]
margin_right = 522.0
margin_bottom = 269.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Body" type="PanelContainer" parent="WD/VB/SC"]
unique_name_in_owner = true
margin_right = 522.0
margin_bottom = 269.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 7 )

[node name="HSeparator" type="HSeparator" parent="WD/VB"]
margin_top = 273.0
margin_right = 522.0
margin_bottom = 288.0
rect_min_size = Vector2( 0, 15 )
size_flags_horizontal = 3

[node name="FooterContainer" type="HBoxContainer" parent="WD/VB"]
unique_name_in_owner = true
margin_top = 292.0
margin_right = 522.0
margin_bottom = 292.0

[node name="OK" type="Button" parent="WD/VB/FooterContainer"]
visible = false
margin_left = 79.0
margin_right = 179.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 3
text = "OK"

[node name="Cancel" type="Button" parent="WD/VB/FooterContainer"]
visible = false
margin_left = 342.0
margin_right = 442.0
margin_bottom = 33.0
rect_min_size = Vector2( 100, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 6
size_flags_vertical = 3
text = "Cancel"

[node name="DebugButton" type="Button" parent="WD/VB"]
unique_name_in_owner = true
margin_top = 296.0
margin_right = 522.0
margin_bottom = 318.0
mouse_default_cursor_shape = 2
theme = ExtResource( 5 )
toggle_mode = true
text = "Debug Console"
icon = ExtResource( 4 )
clip_text = true

[node name="Panel" type="Panel" parent="WD/VB/DebugButton"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 72.0

[node name="CloseButton" type="Button" parent="WD"]
show_behind_parent = true
anchor_left = 1.0
anchor_right = 1.0
margin_left = -78.0
margin_top = -30.0
margin_bottom = 3.0
focus_mode = 0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 0.254902, 0.639216, 1, 1 )
custom_fonts/font = ExtResource( 3 )
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 3 )
text = "X"

[node name="TitleBar" type="Label" parent="WD"]
show_behind_parent = true
margin_top = -30.0
margin_right = 229.595
margin_bottom = 30.0
mouse_filter = 1
mouse_default_cursor_shape = 13
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0.0392157, 0.113725, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/normal = SubResource( 2 )
text = "INdIE's Chosen Title"
align = 1

[connection signal="gui_input" from="." to="." method="_on_CustomWindowDialog_gui_input"]
[connection signal="resized" from="WD/VB/SC" to="." method="_on_SC_resized"]
[connection signal="toggled" from="WD/VB/DebugButton" to="." method="_on_DebugConsole_toggled"]
[connection signal="pressed" from="WD/CloseButton" to="." method="close"]
